# logging_c-23

./: .gitignore  CMakeLists.txt  default.nix  main.cpp  shell.nix
Constants/: Constants.cppm  SplLog.cppm
Log/: Log.cppm
